# UZH_CG_Exercise

./: .gitignore  README.md
Exercise1/: CMakeLists.txt  SOLUTION.md  readme.md
Exercise1/src/: Cube.cpp  Cube.frag  Cube.h  Cube.vert  GLApp.cpp  GLApp.h  GLExample.cpp  GLExample.h  GLIncludes.h  Shape.cpp  Shape.h  Torus.cpp  Torus.frag  Torus.h  Torus.vert  inputModule.h  main.cpp
Exercise2/: CMakeLists.txt  SOLUTION.md
Exercise2/shader/: Normals.vert  Shape.frag  Shape.vert
Exercise2/src/: Camera.cpp  Cube.cpp  Cube.h  GLApp.cpp  GLApp.h  GLExample.cpp  GLExample.h  GLIncludes.h  MultiLine.cpp  MultiLine.h  Shape.cpp  Shape.h  Torus.cpp  main.cpp
Exercise3/: CMakeLists.txt  README.md  setup.bat  setup.sh
Exercise3/shader/: BasicNormals.frag  BasicNormals.vert  BasicShape.frag  BasicShape.vert  TexturedNormals.frag  TexturedNormals.vert  TexturedShape.frag  TexturedShape.vert
Exercise3/src/: Cube.cpp  GLApp.cpp  GLApp.h  GLExample.cpp  GLExample.h  GLIncludes.h  Shape.cpp  Texture.cpp  Texture.h  Torus.cpp  main.cpp
Exercise4/: CMakeLists.txt  README.md  setup.bat  setup.sh
Exercise4/imgui/: CMakeLists.txt
Exercise4/shader/: Lightbox.frag  Shadows.frag  Shape.frag  Shape.vert
Exercise4/src/: Camera.h  GLApp.cpp  GLExample.cpp  GLExample.h  MultiLine.cpp  Torus.cpp  Torus.h  main.cpp
Exercise5/: CMakeLists.txt  README.md
Exercise5/Exercise5/: CMakeLists.txt  setup.bat  setup.sh
Exercise5/Exercise5/shader/: pbr.vert
Exercise5/Exercise5/src/: Drawable.cpp  DrawableShape.cpp:Zone.Identifier  GLExample.cpp  GLExample.h  Mesh.cpp  Mesh.h  Texture.cpp  Texture.h
Exercise5/shader/: Mesh_phong.frag  pbr.frag
Exercise5/src/: Gui.cpp  Gui.h  InputManager.cpp
Exercise6/: CMakeLists.txt  README.md  setup.bat  setup.sh
Exercise6/shader/: Lightbox.vert  Normals.vert  RayTracing.frag  RayTracing.vert  Shadows.frag  Shadows.vert  Shape.frag  Shape.vert
Exercise6/src/: Cube.cpp  GLApp.cpp  GLApp.h  GLExample.cpp  GLExample.h  MultiLine.h  ShaderProgram.cpp  ShaderProgram.h  Shape.h  Square.cpp  Square.h  Texture.cpp  Texture.h  Torus.cpp  embree.cpp  embree.h  main.cpp  ray_tracer.cpp  ray_tracer.h
